Fixed main img not stretching to fill white space when all tabs closed.

--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,9 @@ html {
 }
 
 .page {
-    height: 100vh; 
+    position: fixed;
+    height: 100%;
+    width: 100%;
     margin: 0; 
     display: grid;
     grid-template-rows: auto 1fr;
